WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2004-12-22


Version 0.0.9 (under dev!):
   * fixed display of nick mode changes
   * /notice command fixed (and display when received from server)
   * new keys: ctrl+A (=home), ctrl+E (=end), ctrl+W (=ctrl+backspace)
   * added new config option: "server_command_delay" (delay in seconds after
     startup command for each server)
   * improved main loop for events (treats keyboard input & servers messages at
     same time)

Version 0.0.8 (2004-10-30):
   * /kick command fixed: now ok with many words as reason
   * nickserv passwords hidden (new config option: log_hide_nickserv_pwd on/off)
   * auto-rejoin channels when kicked (new config option: server_autorejoin on/off)
   * added IRC::command function for Perl scripts
   * fixed bug when adding alias with same name as other
   * /buffer command developed (buffers list, move and notify)
   * logging buffers to disk (server/channel/private according to user prefs)
   * Away now announced in channels, and config option "look_display_away" added
     to enable/disable this feature
   * Fixed crash when resizing terminal to very small size
   * "-MORE-" message is now erased when switching to another buffer
   * DCC file receive ok (Alt-D for DCC view)
   * /query command now reopens private buffer if already opened
   * added key for redrawing terminal (Ctrl-L)
   * added key for clearing hotlist (Alt-R)

Version 0.0.7 (2004-08-08):
   * new "col_status_delimiters" config option
   * /buffer command added, buffers ordered by number, auto-jump to active
     buffers (alt-a), jump to buffers by number (alt-number)
   * /window command added, split terminal horizontally/vertically
   * unique color for each nick (based on nickname)
   * action messages are now considered as messages, not crappy joins/parts
   * fixed display bug when nicklist is displayed at bottom of screen